force-app/main/default/objects/cwbtool__MetadataDictionary__c/cwbtool__MetadataDictionary__c.object-meta.xml
<CustomObject>
    <label>Metadata Dictionary</label>
    <nameField>
        <displayFormat>METAD-{0000}</displayFormat>
        <label>Metadata Dic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Dictionary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>