force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__Compliance_Categorization__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Compliance_Categorization__c</fullName>
    <label>Compliance Categorization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCPA</fullName>
            </value>
            <value>
                <fullName>COPPA</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>PCI</fullName>
            </value>
            <value>
                <fullName>PersonalInfo</fullName>
            </value>
            <value>
                <fullName>PII</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>