force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__ComponentName__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__ComponentName__c</fullName>
    <label>Component Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>