force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__Data_Owner__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Data_Owner__c</fullName>
    <label>Data Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>