force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__Data_Sensitivity_Level__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Data_Sensitivity_Level__c</fullName>
    <label>Data Sensitivity Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>MissionCritical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>