force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__Field_Usage__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Field_Usage__c</fullName>
    <label>Field Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>DeprecateCandidate</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>