force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__FieldType__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__FieldType__c</fullName>
    <label>Field Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>