force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__InternalDatabaseMapping__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__InternalDatabaseMapping__c</fullName>
    <label>Internal Database Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>