force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__Label__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>