force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__LinktoTrailhead__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__LinktoTrailhead__c</fullName>
    <label>Link to Trailhead</label>
    <type>TextArea</type>
</CustomField>