force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__Parent__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Parent__c</fullName>
    <label>Parent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>