force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__Published__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>