force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__Read_only_Field__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Read_only_Field__c</fullName>
    <label>Read only Field?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>