force-app/main/default/objects/cwbtool__MetadataDictionary__c/fields/cwbtool__Requester__c.field-meta.xml
<CustomField>
    <fullName>cwbtool__Requester__c</fullName>
    <label>Requester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>